# sbs-braille-tables

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  Dockerfile  Dockerfile.build_with_liblouis  Dockerfile.build_with_liblouis_2_5_2  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  pom.xml
.github/workflows/: main.yml
build-aux/: .gitignore
debian/: changelog  rules
lib/: .gitignore  Makefile.am
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
src/: Makefile.am  sbs-code.cti  sbs-de-accents-ch.mod  sbs-de-accents.cti  sbs-de-accents.mod  sbs-de-core.mod  sbs-de-core.mod_src  sbs-de-core6.cti  sbs-de-g0-core.mod_src  sbs-de-g1-core-patterns.dic  sbs-de-g1-core.mod  sbs-de-g1-core.mod_src  sbs-de-g2-core-patterns.dic  sbs-de-g2-core.mod  sbs-de-g2-core.mod_src  sbs-de-g2-name-patterns.dic  sbs-de-g2-name.mod  sbs-de-g2-name.mod_src  sbs-de-g2-place-patterns.dic  sbs-de-g2-place.mod  sbs-de-g2-place.mod_src  sbs-de-hyph-new.mod  sbs-de-hyph-old.mod  sbs-de-hyph-word.mod  sbs-de-letsign.mod  sbs-litdigit-lower.mod  sbs-litdigit-lower.mod_src  sbs-litdigit-upper.mod_src  sbs-special.cti  sbs-special.mod  sbs-whitespace.mod  sbs-wordsplit.dis
src/main/deb/DEBIAN/: control
src/main/java/ch/sbs/pipeline/braille/impl/: TablePath.java
src/main/resources/tables/: sbs-code.cti  sbs-de-accents.cti  sbs-de-core6.cti  sbs-de-g1-core.mod_src  sbs-special.cti  sbs-version.utb  sbs.dis
src/tables/: sbs-de-g1-core.mod_src  sbs-de-hyph-none.mod  sbs-de-hyph-word.mod  sbs-wordsplit.dis
src/test/java/: OSGiTest.java  TablesTest.java
src/test/resources/: logback.xml
tables/: .gitignore  Makefile.am  maketablelist.sh  sbs-checktab-g1.ctb  sbs-checktab-g2-name.ctb  sbs-checktab-g2.ctb  sbs-code.cti  sbs-de-accents-ch.cti  sbs-de-accents-ch.mod  sbs-de-accents-reduced.cti  sbs-de-accents-reduced.mod  sbs-de-accents.cti  sbs-de-accents.mod  sbs-de-begendcaps.mod  sbs-de-capsign-fake.mod  sbs-de-capsign.mod  sbs-de-core.mod  sbs-de-core6.cti  sbs-de-g0-core.mod  sbs-de-g1-core.mod  sbs-de-g2-core-patterns.dic  sbs-de-g2-core.mod  sbs-de-g2-name-patterns.dic  sbs-de-g2-name.mod  sbs-de-g2-place-patterns.dic  sbs-de-g2-place.mod  sbs-de-hyph-new.mod  sbs-de-hyph-none.mod  sbs-de-hyph-old.mod  sbs-de-hyph-word.mod  sbs-de-letsign.mod  sbs-litdigit-lower.mod  sbs-litdigit-upper.mod  sbs-numsign.mod  sbs-special.cti  sbs-special.mod  sbs-version.utb.in  sbs-whitespace.mod  sbs-wordsplit.dis  sbs.dis  (+1 more)
tables_src/: Makefile.am
tables_src/sbs-tables/: Makefile.am  libtabdir.kex  libtable.kex  sbs-de-accents-ch.cti_src  sbs-de-accents-ch.mod  sbs-de-accents-ch.mod_src  sbs-de-accents-reduced.cti_src  sbs-de-accents-reduced.mod_src  sbs-de-accents.cti  sbs-de-accents.cti_src  sbs-de-accents.mod  sbs-de-accents.mod_src  sbs-de-begendcaps.mod_src  sbs-de-capsign.mod_src  sbs-de-core.mod_src  sbs-de-core6.cti  sbs-de-core6.cti_src  sbs-de-g0-core.mod_src  sbs-de-g1-core.mod_src  sbs-de-g2-core.mod_src  sbs-de-g2-name.mod_src  sbs-de-hyph-new.mod_src  sbs-de-hyph-none.mod_src  sbs-de-hyph-old.mod  sbs-de-hyph-old.mod_src  sbs-de-hyph-word.mod_src  sbs-de-letsign.mod  sbs-de-letsign.mod_src  sbs-litdigit-lower.mod_src  sbs-litdigit-upper.mod_src  sbs-numsign.mod_src  sbs-special.cti  sbs-special.cti_src  sbs-special.mod_src  sbs-whitespace.mod  sbs-whitespace.mod_src  sbs-wordsplit.dis_src  sbs.dis_src  tab2lou.bat  tabs.bat
tables_src/sbs-white/: libwhite.kex  white.bat
tables_src/util/BrailleTables/: .classpath  .project  build.xml
tables_src/util/BrailleTables/src/: Braille.java  TabToLiblouis.java  WhiteToLiblouis.java
tables_src/util/BrailleTables/test_src/: AllTests.java  BrailleTest.java  TabToLiblouisTest.java  WhiteToLiblouisTest.java
tables_src/util/src/: Braille.java  TabToLiblouis.java  WhiteToLiblouis.java
tests/: Makefile.am  accents.yaml  check_all_tables  check_combined_tables.pl  computerbraille.yaml  de-ch-g2.yaml  g0.yaml  g2-code.yaml  g2.yaml  v-form.yaml
tests/tables/: Makefile.am  sbs-without-non-breaking-hyphen.dis
utils/: Braille.pm  Makefile.am  cleanHyphenation.py  cleanHyphenation_mod_src.py  tab2lou.pl  white.pl
