braille_tables =				\
	sbs-code.cti				\
	sbs-de-accents-ch.mod			\
	sbs-de-accents-reduced.mod		\
	sbs-de-accents.cti			\
	sbs-de-accents.mod			\
	sbs-de-begendcaps.mod			\
	sbs-de-capsign.mod			\
	sbs-de-capsign-fake.mod			\
	sbs-de-core.mod				\
	sbs-de-core6.cti			\
	sbs-de-g0-core.mod			\
	sbs-de-g1-core-patterns.dic		\
	sbs-de-g1-core.mod			\
	sbs-de-g2-core-patterns.dic		\
	sbs-de-g2-core.mod			\
	sbs-de-g2-name-patterns.dic		\
	sbs-de-g2-name.mod			\
	sbs-de-g2-place-patterns.dic		\
	sbs-de-g2-place.mod			\
	sbs-de-letsign.mod			\
	sbs-litdigit-lower.mod			\
	sbs-numsign.mod				\
	sbs-special.cti				\
	sbs-special.mod				\
	sbs-whitespace.mod			\
	sbs-wordsplit.dis			\
	sbs.dis

version_table = sbs-version.utb

table_files = $(braille_tables) $(version_table)

tablesdir = $(datadir)/liblouis/tables
dist_tables_DATA = $(table_files)
