table_files = \
	sbs-de-accents-ch.mod_src \
	sbs-de-accents.cti_src \
	sbs-de-accents.mod_src \
	sbs-de-accents-reduced.mod_src \
	sbs-de-begendcaps.mod_src \
	sbs-de-capsign.mod_src \
	sbs-de-core6.cti_src \
	sbs-de-core.mod_src \
	sbs-de-g0-core.mod_src \
	sbs-de-g1-core.mod_src \
	sbs-de-g2-core.mod_src \
	sbs-de-g2-name.mod_src \
	sbs-de-g2-place.mod_src \
	sbs-de-hyph-new.mod_src \
	sbs-de-hyph-none.mod_src \
	sbs-de-hyph-old.mod_src \
	sbs-de-hyph-word.mod_src \
	sbs-de-letsign.mod_src \
	sbs.dis_src \
	sbs-litdigit-lower.mod_src \
	sbs-litdigit-upper.mod_src \
	sbs-numsign.mod_src \
	sbs-special.cti_src \
	sbs-special.mod_src \
	sbs-whitespace.mod_src 

EXTRA_DIST = $(table_files)

